Rename project interally, use 'Core', inline tests, expect tests
Use 'Core', inline tests, expect tests

housekeeping

continue

--- a/calyx.opam
+++ b/calyx.opam
@@ -13,16 +13,14 @@ depends: [
   "ocaml"
   "dune" {>= "3.19"}
   "angstrom"
-  "sedlex"
   "ppx_deriving"
   "ppx_sexp_conv"
-  "sexplib"
-  "base"
+  "core"
   "stdio"
   "fmt"
   "cmdliner"
-  "alcotest" {with-test}
-  "qcheck" {with-test}
+  "ppx_inline_test" {with-test}
+  "ppx_expect" {with-test}
   "odoc" {with-doc}
 ]
 build: [
