--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,7 @@
 (library
  (public_name calyx)
  (name calyx)
- (libraries angstrom base stdio fmt)
+ (libraries angstrom base fmt core)
  (preprocess
-  (pps ppx_deriving.show ppx_sexp_conv)))
+  (pps ppx_deriving.show ppx_sexp_conv ppx_inline_test ppx_expect))
+ (inline_tests))
