--- a/lib/dune
+++ b/lib/dune
@@ -7,7 +7,7 @@
 (library
  (public_name calyx)
  (name calyx)
- (libraries angstrom base fmt core menhirLib)
+ (libraries angstrom base core menhirLib unix)
  (preprocess
   (pps ppx_deriving.show ppx_sexp_conv ppx_inline_test ppx_expect))
  (inline_tests))
