--- a/lib/dune
+++ b/lib/dune
@@ -10,7 +10,7 @@
  (libraries base core menhirLib unix qcheck)
  (foreign_stubs
   (language c)
-  (names bloom bloom_stubs))
+  (names bloom bloom_stubs vector vector_stubs))
  (preprocess
   (pps ppx_deriving.show ppx_sexp_conv ppx_inline_test ppx_expect))
  (inline_tests))
