--- a/lib/dune
+++ b/lib/dune
@@ -12,5 +12,10 @@
   (language c)
   (names bloom bloom_stubs vector vector_stubs))
  (preprocess
-  (pps ppx_deriving.show ppx_sexp_conv ppx_inline_test ppx_expect))
+  (pps
+   ppx_deriving.show
+   ppx_deriving.map
+   ppx_sexp_conv
+   ppx_inline_test
+   ppx_expect))
  (inline_tests))
