improve constructor recognition

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ Thumbs.db
 *.js.map
 test.js
 .calyx/
+
+# Tree-sitter generated files
+tree-sitter-calyx/node_modules/
+tree-sitter-calyx/src/
+tree-sitter-calyx/*.so
+tree-sitter-calyx/package-lock.json
