Fix pattern matching in JS backend, skeleton for resolution prepass

--- a/lib/dune
+++ b/lib/dune
@@ -2,7 +2,7 @@
 
 (menhir
  (modules parser)
- (flags --dump --cmly --table))
+ (flags --dump --cmly --table --base calyx))
 
 (library
  (public_name calyx)
