--- a/lib/dune
+++ b/lib/dune
@@ -7,16 +7,23 @@
 (library
  (public_name calyx)
  (name calyx)
- (libraries base core menhirLib unix qcheck)
+ (libraries
+  base
+  core
+  core_unix
+  core_unix.time_unix
+  ppx_log
+  menhirLib
+  unix
+  qcheck)
  (foreign_stubs
   (language c)
   (names bloom bloom_stubs vector vector_stubs))
  (preprocess
   (pps
+   ppx_jane
    ppx_deriving.show
    ppx_deriving.eq
-   ppx_deriving.map
-   ppx_sexp_conv
-   ppx_inline_test
-   ppx_expect))
+   ppx_deriving.make
+   ppx_deriving.map))
  (inline_tests))
